fix(test): keep migration tests Java 8 compatible